# Second_attempt_for_my_specialty

./: .env.example  README.md  main.py  pyproject.toml
data/: transactions_excel.xlsx
src/: decorators.py  external_api.py  file_reader.py  generators.py  masks.py  processing.py  searchers.py  utils.py  widget.py
tests/: conftest.py  test_decorators.py  test_file_reader.py  test_generators.py  test_masks.py  test_processing.py  test_searchers.py  test_utils.py  test_widget.py
